Ctrl-s save map and fix tat.sh

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
+unbind C-s
 unbind C-b
-set -g prefix C-s
+set -g prefix C-a
 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded, yo."
 
