Tweaked tmux colors and nerdtree config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+# Useful command to get current settings: tmux show -g | cat > ~/.tmux.conf
+
 unbind C-b
 set -g prefix C-a
 
@@ -12,6 +14,16 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 set -g default-terminal "screen-256color"
 
+set -g status-bg '#1230b2'
+set -g status-fg '#ffffff'
+set -g status-left "#[fg=#ffffff][#S]"
+
+setw -g window-status-bg default
+setw -g window-status-fg '#ffffff'
+setw -g window-status-current-fg '#000000'
+setw -g window-status-current-bg '#ffbe00'
+
+set -g status-left-bg default
 set -g status-left-length 50
 
 bind-key - split-window -v -c '#{pane_current_path}'
