--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,7 @@ setw -g window-status-bg default
 setw -g window-status-fg '#ffffff'
 setw -g window-status-current-fg '#000000'
 setw -g window-status-current-bg '#ffbe00'
+setw -g mode-mouse on
 
 set -g status-left-bg default
 set -g status-left-length 50
@@ -47,3 +48,9 @@ set-option -g renumber-windows on
 bind-key b break-pane -d
 
 bind-key C-j choose-tree
+bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+
+bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
+
+bind-key C-b send-keys 'tat && exit' 'C-m'
+bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
