--- a/tmux.conf
+++ b/tmux.conf
@@ -14,14 +14,14 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 set -g default-terminal "screen-256color"
 
-set -g status-bg '#1230b2'
+set -g status-bg '#262633'
 set -g status-fg '#ffffff'
-set -g status-left "#[fg=#ffffff][#S]"
+set -g status-left "#[fg=#fff][#S]"
 
 setw -g window-status-bg default
 setw -g window-status-fg '#ffffff'
-setw -g window-status-current-fg '#000000'
-setw -g window-status-current-bg '#ffbe00'
+setw -g window-status-current-fg '#ffffff'
+setw -g window-status-current-bg '#62548b'
 setw -g mode-mouse on
 
 set -g status-left-bg default
@@ -63,6 +63,7 @@ setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy C-v rectangle-toggle
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
