Removes nvim and does other things

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,8 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 set -g default-terminal "screen-256color"
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 set -g status-bg '#262633'
 set -g status-fg '#ffffff'
