--- a/tmux.conf
+++ b/tmux.conf
@@ -24,7 +24,9 @@ setw -g window-status-bg default
 setw -g window-status-fg '#ffffff'
 setw -g window-status-current-fg '#ffffff'
 setw -g window-status-current-bg '#62548b'
-setw -g mode-mouse on
+
+setw -g mouse on
+#setw -g mode-mouse on
 
 set -g status-left-bg default
 set -g status-left-length 50
@@ -59,15 +61,10 @@ bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-m
 
 bind-key k send-keys C-l \; clear-history
 
-
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy C-v rectangle-toggle
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-selection
