--- a/tmux.conf
+++ b/tmux.conf
@@ -64,7 +64,11 @@ bind-key k send-keys C-l \; clear-history
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+
+# Setup 'v' to begin selection as in Vim
+#bind-key -T copy-mode-vi 'y' send -X copy-selection
