Remove right pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,6 +31,8 @@ setw -g mouse on
 set -g status-left-bg default
 set -g status-left-length 50
 
+set -g status-right ""
+
 bind-key - split-window -v -c '#{pane_current_path}'
 bind-key / split-window -h -c '#{pane_current_path}'
 
